# FastAPI

./: Dockerfile  Makefile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  sql_app.db
app/db/: env_manager.db
examples/: main.py  models.py  resources.py  routes.py
fastapi_admin/: app.py  depends.py  enums.py  exceptions.py  file_upload.py  i18n.py  middlewares.py  models.py  resources.py  template.py
fastapi_admin/providers/: __init__.py
fastapi_admin/routes/: __init__.py  resources.py
fastapi_admin/templates/: base.html  create.html  layout.html  list.html  update.html
fastapi_admin/templates/components/: alert_error.html  dropdown-show.html  dropdown.html  language.html  link.html  model.html  select.html
fastapi_admin/templates/errors/: 401.html  403.html  404.html  500.html  maintenance.html
fastapi_admin/templates/providers/login/: avatar.html  login.html
fastapi_admin/templates/widgets/filters/: datetime.html  search.html  select.html
fastapi_admin/templates/widgets/inputs/: date.html  datetime.html  editor.html  image.html  input.html  json.html  many_to_many.html  radio.html  select.html  switch.html  textarea.html
fastapi_admin/widgets/: __init__.py  displays.py  filters.py
public/: index.html
