[project]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Gulmira",email = "gulmiraisakbaeva78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
