[project]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Gulmira",email = "gulmiraisakbaeva78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.13.0,<5.0.0)",
    "cffi (>=2.0.0,<3.0.0)",
    "click (>=8.3.3,<9.0.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "idna (>=3.13,<4.0)",
    "pycparser (>=3.0,<4.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-core (>=2.46.4,<3.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "starlette (>=1.0.0,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
